add Login & Register UI and basic validation check

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MoLink</string>
+    <string name="sign_up">
+        <b>
+            <u>Sign Up</u>
+        </b>
+    </string>
 </resources>
+
+
